Connect frontend to backend (#43)
